# hicoder

./: .gitignore  pyproject.toml
config/: default.json  default.toml
docs/: codex_function_list.md  codex_功能分析.md  分阶段实现.md
hicoder/: __init__.py  agent_loop.py  app.py  auth.py  config.py  session.py
hicoder/models/: __init__.py  model_client.py
hicoder/protocol/: __init__.py  adapter.py  events.py  models.py
hicoder/tools/: __init__.py  file.py  registry.py  shell.py  truncation.py
openspec/changes/archive/2026-06-02-iter1-skeleton-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-iter2-model-access/: design.md  proposal.md  tasks.md
openspec/changes/iter3-core-agent-loop/: design.md  proposal.md  tasks.md
openspec/changes/iter3-core-agent-loop/specs/agent-loop/: spec.md
openspec/changes/iter3-core-agent-loop/specs/context-builder/: spec.md
openspec/changes/iter3-core-agent-loop/specs/model-client/: spec.md
openspec/changes/iter3-core-agent-loop/specs/session/: spec.md
openspec/changes/iter3-core-agent-loop/specs/tool-execution/: spec.md
openspec/changes/iter3-core-agent-loop/specs/tool-file/: spec.md
openspec/changes/iter3-core-agent-loop/specs/tool-shell/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/config-system/: spec.md
openspec/specs/event-protocol/: spec.md
openspec/specs/model-client/: spec.md
tests/: conftest.py  test_adapter.py  test_agent_loop.py  test_config.py  test_diff_tracking.py  test_model_client.py  test_tool_registry.py  test_tools.py
(+3 files in other folders)
